Misc updates in order of supp figures

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -935,25 +935,26 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 \renewcommand{\thefigure}{S\@arabic\c@figure}
 \makeatother
 %
-\begin{figure}[htbp]
-	\begin{center}
-	\begin{overpic}[width=1.\linewidth]{images/GravitropicStimulation.pdf}
-	\end{overpic}
-\caption[Lateral root induction by gravistimulation.]
-{{\bf Lateral root induction by gravistimulation.} Seven days old plants were rotated by 90\degree  for different periods of time. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analyzed.}
-	\label{fig:gravistimul}
-	\end{center}
-\end{figure}
-%
-\clearpage
+
 \begin{figure}[htbp]
 	\begin{center}
 	\begin{overpic}[width=1.\linewidth]{images/mDSLM_specimen_qc_compressed.pdf}
 	\end{overpic}
 \caption[Arabidopsis in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM).]
 {{\bf Arabidopsis in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM).} 
-(A) Perspective sketch of the plant specimen holder in front of the two objective lenses. Only the fluorophores in a thin planar volume that overlaps with the focal plane of the detection objective lens are excited. Thus fluorophores outside this volume do not blur the image and are not subjected to photo bleaching. (B, E) The central components of the mDSLM are mounted on a plate. All optical components are inside a single aluminum block. Four motors below the specimen chamber move and rotate the plant. The filter wheel is uncoupled from the aluminum block. Images are captured with cameras from Andor, either Clara or Neo. A flexible optical glass fiber guides the light coming from a small fluorescent lamp above the plant in the microscope?s specimen chamber. (C) Top view of the specimen chamber. (D, F) Side-view into the chamber with the root in front of the detection lens. The plant grows in an upright position. While the leaves remain in the air, the root system is perfused with an liquid medium. (G) Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. Legend: 1: illumination objective lens, 2: perfusion system, 3: specimen chamber, 4: A. thaliana in capillary, 5: detection objective lens, 6: microscope stage, 7: laser light sheet, 8: filter wheel, 9: camera.}
+(A) Perspective sketch of the plant specimen holder in front of the two objective lenses. Only the fluorophores in a thin planar volume that overlaps with the focal plane of the detection objective lens are excited. Thus fluorophores outside this volume do not blur the image and are not subjected to photo bleaching. (B, E) The central components of the mDSLM are mounted on a plate. All optical components are inside a single aluminum block. Four motors below the specimen chamber move and rotate the plant. The filter wheel is uncoupled from the aluminum block. Images are captured with cameras from Andor, either Clara or Neo. A flexible optical glass fiber guides the light coming from a small fluorescent lamp above the plant in the microscope specimen chamber. (C) Top view of the specimen chamber. (D, F) Side-view into the chamber with the root in front of the detection lens. The plant grows in an upright position. While the leaves remain in the air, the root system is perfused with an liquid medium. (G) Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. Legend: 1: illumination objective lens, 2: perfusion system, 3: specimen chamber, 4: A. thaliana in capillary, 5: detection objective lens, 6: microscope stage, 7: laser light sheet, 8: filter wheel, 9: camera.}
 	\label{fig:mDSLM}
+	\end{center}
+\end{figure}
+%
+\clearpage
+\begin{figure}[htbp]
+	\begin{center}
+	\begin{overpic}[width=1.\linewidth]{images/GravitropicStimulation.pdf}
+	\end{overpic}
+\caption[Lateral root induction by gravistimulation.]
+{{\bf Lateral root induction by gravistimulation.} Seven days old plants were rotated by 90\degree  for different periods of time. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analyzed. See Supplemental movie  \href{http://youtu.be/sLvVCbWye-E}{\textcolor{blue}{[LINK]}}}
+	\label{fig:gravistimul}
 	\end{center}
 \end{figure}
 %
@@ -964,7 +965,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets_compressed.pdf}
 	\end{overpic}
 \caption[Time lapse recording of five lateral root primordia.]
-{{\bf Time lapse recording of five lateral root primordia.} For each indicated dataset (details on Table 1 (main text) and \ref{tab:metadata}) Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of \textit{pUBQ10::YFP-PIP1;4} (membranes) and \textit{pGATA23::GUS-GFP-NLS} (nuclei) is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table~\ref{tab:metadata}.}
+{{\bf Time lapse recording of five lateral root primordia.} For each indicated dataset (details on Table 1 (main text) and \ref{tab:metadata}) Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of \textit{pUBQ10::YFP-PIP1;4} (membranes) and \textit{pGATA23::GUS-GFP-NLS} (nuclei) is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table~\ref{tab:metadata}. Links to movies of each datasets are listed in~\ref{\label{sec:suppmovies}}}.
 	\label{fig:alldatasets}
 	\end{center}
 \end{figure}
@@ -975,7 +976,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 	\begin{overpic}[width=1.\linewidth]{images/DatasetsTrackingFounders_compressed.pdf}
 	\end{overpic}
 \caption[Five virtual lateral root primordia.]
-{{\bf Five virtual lateral root primordia.} For each indicated datasets, the spatial distribution of cell nuclei is represented. The first and last time point segmented as well as the one corresponding to 142 cells primordia are shown in the front, side and radial views. Clonally related cells share the same colour. The colour scheme used is identical to Figure 2C (main text). }
+{{\bf Five virtual lateral root primordia.} For each indicated datasets, the spatial distribution of cell nuclei is represented. The first and last time point segmented as well as the one corresponding to 142 cells primordia are shown in the front, side and radial views. Clonally related cells share the same colour. The colour scheme used is identical to Figure 2C (main text). Links to movies of each datasets are listed in~\ref{\label{sec:suppmovies}}}.
 	\label{fig:trackingfounders}
 	\end{center}
 \end{figure}
@@ -1052,20 +1053,8 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 		\end{overpic}
 \caption[Division sequence trees for all five datasets and the aurora mutant.]
 {
-{\bf Division sequence trees for all five datasets and the aurora mutant.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions.}
+{\bf Division sequence trees for all five datasets and the aurora mutant.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layers formation for each datasets are listed in~\ref{\label{sec:suppmovies}}}}
 	\label{fig:treeDivisionSequences}
-	\end{center}
-\end{figure}
-%
-\clearpage
-%
-\begin{figure}[htbp]
-	\begin{center}
-	\begin{overpic}[width=0.5\linewidth]{images/Founders_and_endodermis_compressed.pdf}
-	\end{overpic}
-\caption[Correlation between endoderm cells disposition and first dividing founder.]
-{{\bf Correlation between endoderm cells disposition and first dividing founder} (A) First time point of the membrane channel in the front view. (B) A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are yellow or orange. The other cell files in grey. The white-magenta dashed line represents the contours of the overlying endodermis cells. The blue arrowhead indicate the first founder to divide.}
-	\label{fig:foundersendo}
 	\end{center}
 \end{figure}
 %
@@ -1079,6 +1068,18 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 \caption[Timing of each division per cell file.]
 {{\bf Timing of each division per cell file.} For each indicated round of division (subpanels $Cycle 1, ... Cycle 6$), each division is plotted according to the cell file in which it occurs and its time of occurrence (in 5mins time-steps). The dashed box indicates the master cell file.}
 	\label{fig:mastertimediv}
+	\end{center}
+\end{figure}
+%
+\clearpage
+%
+\begin{figure}[htbp]
+	\begin{center}
+	\begin{overpic}[width=0.5\linewidth]{images/Founders_and_endodermis_compressed.pdf}
+	\end{overpic}
+\caption[Correlation between endoderm cells disposition and first dividing founder.]
+{{\bf Correlation between endoderm cells disposition and first dividing founder} (A) First time point of the membrane channel in the front view. (B) A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are yellow or orange. The other cell files in grey. The white-magenta dashed line represents the contours of the overlying endodermis cells. The blue arrowhead indicate the first founder to divide.}
+	\label{fig:foundersendo}
 	\end{center}
 \end{figure}
 %
@@ -1098,16 +1099,6 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 
 %
 \begin{figure}[htbp]
-	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
-	\end{overpic}
-\caption[ Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.]
-{{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of pPIN1::PIN1-GFP is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table S~\ref{tab:metadata}}
-\label{fig:aurora}
-\end{figure}
-%
-\clearpage
-%
-\begin{figure}[htbp]
 	\begin{overpic}[width=1.\linewidth]{images/model_supp.pdf}
 	\end{overpic}
 \caption[Model of lateral root formation with random choice of division plane and generation of daughter cells of equal surface.]
@@ -1115,6 +1106,17 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 \label{fig:suppmodel}
 \end{figure}
 %
+\clearpage
+%
+\begin{figure}[htbp]
+	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
+	\end{overpic}
+\caption[ Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.]
+{{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of pPIN1::PIN1-GFP is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table S~\ref{tab:metadata}}
+\label{fig:aurora}
+\end{figure}
+%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SUPP MOVIES
