added legend of Table S1

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -856,7 +856,7 @@ Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift 
 & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z\\
 & 555 x 221 x 147 & 689 x 393 x 200 & 736 x 376 x 170 & 682 x 406 x 130 & 666 x 404 x 130 & 684 x 378 x 110\\
 \bottomrule
-\caption[XXXXX.]{\textbf{PLACEHOLDER.}
+\caption[Metadata of  light sheet recordings.]{\textbf{Metadata of  light sheet recordings.}
 	}
 \label{tab:metadata}
 \end{longtable}
