Updated Supp model figure and legend

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -856,6 +856,7 @@ Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift 
 & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z\\
 & 555 x 221 x 147 & 689 x 393 x 200 & 736 x 376 x 170 & 682 x 406 x 130 & 666 x 404 x 130 & 684 x 378 x 110\\
 \bottomrule
+
 \caption[Metadata of  light sheet recordings.]{\textbf{Metadata of  light sheet recordings.}
 	}
 \label{tab:metadata}
@@ -1139,8 +1140,8 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 \begin{figure}[htbp]
 	\begin{overpic}[width=1.\linewidth]{images/model_supp.pdf}
 	\end{overpic}
-\caption[Model of lateral root formation with random choice of division plane and generation of daughter cells of equal surface.]
-{{\bf Model of lateral root formation with random choice of division plane and generation of daughter cells of equal surface.} (A) visualise the result of the model at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the virtual lateral roots (Figure 4D, main text) are indicated. }
+\caption[Models of lateral root formation with alternate rules of divisions]
+{{\bf Models of lateral root formation with alternate rules of divisions.} In the first model (A-C), a random choice of division plane is used (as in Figure 5, main text) but daughter cells of equal surface are generated. In the second model (D-F), the plane of division is perpendicular to the direction of growth (see \ref{sec:divisionRules}), the first division of the founder is asymmetric. In the third model (G-I), the plane of division is orthogonal to the previous one (see \ref{sec:divisionRules}), the first division of the founder is asymmetric.  (A, D, G) visualise the result of the model at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B, E, H) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C, F, I) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the virtual lateral roots (Figure 4D, main text) are indicated. }
 \label{fig:suppmodel}
 \end{figure}
 %
