Fixed entries in monster table

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -876,10 +876,10 @@ For this purpose, we modify the visualisation of the division sequence trees. Le
 \toprule
 Dataset & \#120830 & \#121204 & \#121211 & \#130508 & \#130607 & \#131203\\
 \midrule
-Specimen & Arabidopsis thaliana, Col-0 & Arabidopsis thaliana, Col-0 & Arabidopsis thaliana, Col-0 & Arabidopsis thaliana, Col-0 & Arabidopsis thaliana, Col-0 & Arabidopsis thaliana, Col-0
+Specimen & \textit{\textit{Arabidopsis thaliana}}, Col-0 & \textit{Arabidopsis thaliana}, Col-0 & \textit{Arabidopsis thaliana}, Col-0 & \textit{Arabidopsis thaliana}, Col-0 & \textit{Arabidopsis thaliana}, Col-0 & \textit{Arabidopsis thaliana}, Col-0
 aur1-2 aur2-2 double mutant\\
-Reporters & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pUBI10::H2B-RFP\\
-& pUBI10::H2B-RFP & pUBI10::H2B-RFP & pUBI10::H2B-RFP & pUBI10::H2B-RFP & pUBI10::H2B-RFP & pPIN1::PIN1-GFP\\
+Reporters & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pGATA23::GUS-GFP-NLS & pUBQ10::H2B-RFP\\
+& pUBQ10::H2B-RFP & pUBQ10::H2B-RFP & pUBQ10::H2B-RFP & pUBQ10::H2B-RFP & pUBQ10::H2B-RFP & pPIN1::PIN1-GFP\\
 & pUBQ10::YFP-PIP1;4 & pUBQ10::YFP-PIP1;4 & pUBQ10::YFP-PIP1;4 & pUBQ10::YFP-PIP1;4 & pUBQ10::YFP-PIP1;4 & \ \\
 \ & \ & \ & \ & \ & \ & \ \\
 Growth & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41L3 Plant Incubator\\
@@ -914,7 +914,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & Start Time = 30.8.2012, 16:24pm & Start Time = 4.12.2012, 1:20pm & Start Time = 11.12.2012, 14:45pm & Start Time = 8.5.2013, 12:25pm & Start Time = 3.6.2013, 15:00pm & Start Time = 3.12.2013, 12:40pm\\
 & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min & Interval = 5min\\
 & Total Recording Time = 47h & Total Recording Time = 45h & Total Recording Time = 39h 30min & Total Recording Time = 50h 30min & Total Recording Time = 65h 20min & Total Recording Time = 42h 55min\\
-& Total Raw Data = 100 GB & Total Raw Data = 167 GB & Total Raw Data = 152 GB & Total Raw Data = 432 GB & Total Raw Data = 243 GB & Total Raw Data = 159 GB\\
+& Total Raw Data = 175 GB & Total Raw Data = 167 GB & Total Raw Data = 147 GB & Total Raw Data = 188 GB & Total Raw Data = 243 GB & Total Raw Data = 159 GB\\
 & Detection Lens & Detection Lens & Detection Lens & Detection Lens & Detection Lens & Detection Lens\\
 & Carl Zeiss N-Achroplan 40x/0.75 W & Carl Zeiss N-Achroplan 40x/0.75 W & Carl Zeiss N-Achroplan 40x/0.75 W & Carl Zeiss N-Achroplan 40x/0.75 W & Carl Zeiss N-Achroplan 40x/0.75 W & Carl Zeiss N-Achroplan 40x/0.75 W\\
 & Illumination Lens & Illumination Lens & Illumination Lens & Illumination Lens & Illumination Lens & Illumination Lens\\
@@ -924,12 +924,12 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & Spacing = 0.645 & Spacing = 0.645 & Spacing = 0.645 & Spacing = 0.645 & Spacing = 0.645 & Spacing = 0.645\\
 & Depth = 150$\mu$m & Depth = 150$\mu$m & Depth = 150$\mu$m & Depth = 150$\mu$m & Depth = 150$\mu$m & Depth = 150$\mu$m\\
 & Channels & Channels & Channels & Channels & Channels & Channels\\
-& Channel 1 & Channel 3 & Channel 4 & Channel 5 & Channel 6 & Channel 6\\
+& Channel 1 & Channel 1 & Channel 1 & Channel 1 & Channel 1 & Channel 1\\
 & Wave Length = 488 nm & Wave Length = 488 nm & Wave Length = 488 nm & Wave Length = 488 nm & Wave Length = 488 nm & Wave Length = 488 nm\\
 & Laser Power = 0.16 mW & Laser Power = 0.18 mW & Laser Power = 0.12 mW & Laser Power = 0.42 mW & Laser Power = 0.42 mW & Laser Power = 0.02 mW (re-adjust to 0.35 mW)\\
 & Filter = 534/30 & Filter = 525/50 & Filter = 525/50 & Filter = 525/50 & Filter = 525/50 & Filter = 525/50\\
 & Camera Integration Time = 75 ms & Camera Integration Time = 40 ms & Camera Integration Time = 75 ms & Camera Integration Time = 30 ms & Camera Integration Time = 30 ms & Camera Integration Time = 40 ms\\
-& Channel 2 & Channel 4 & Channel 5 & Channel 6 & Channel 7 & Channel 7\\
+& Channel 2 & Channel 2 & Channel 2 & Channel 2 & Channel 2 & Channel 2\\
 & Wave Length = 561 nm & Wave Length = 561 nm & Wave Length = 561 nm & Wave Length = 561 nm & Wave Length = 561 nm & Wave Length = 561 nm\\
 & Laser Power = 0.32 mW & Laser Power = 0.4 mW & Laser Power = 0.21 mW & Laser Power = 0.21 mW & Laser Power = 0.6 mW & Laser Power = 0.02 mW\\
 & Filter = 607/70 & Filter = 607/70 & Filter = 607/70 & Filter = 607/70 & Filter = 607/70 & Filter = 607/70\\
@@ -939,7 +939,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True\\
 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2\\
 & Format & Format & Format & Format & Format & Format\\
-& Pixels = 1392 x 1040 (696 x 520) & Pixels = 1392 x 1040 (696 x 520) & Pixels = 1392 x 1040 (696 x 520) & Pixels = 1392 x 1040 (696 x 520) & Pixels = 1392 x 1040 (696 x 520) & Pixels = 1392 x 1040 (696 x 520)\\
+& Pixels = 1372 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520)\\
 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14\\
 & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m\\
 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1\\
@@ -948,9 +948,7 @@ Post Processing & Fiji Plugin: Correct 3D Drift & Fiji Plugin: Correct 3D Drift 
 & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z & Crop Dimension X x Y x Z\\
 & 555 x 221 x 147 & 689 x 393 x 200 & 736 x 376 x 170 & 682 x 406 x 130 & 666 x 404 x 130 & 684 x 378 x 110\\
 \bottomrule
-
-\caption[Metadata of light sheet recordings.]{\textbf{Metadata of light sheet recordings.}
-	}
+\caption[Metadata of light sheet recordings.]{\textbf{Metadata of light sheet recordings.}}
 \label{tab:metadata}
 \end{longtable}
 \end{sidewaystable}
