New supp figures, new main fig 5 and matching updates in SuppMat

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1151,7 +1151,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 	\begin{overpic}[width=1.\linewidth]{images/Growth-Rate-Curves.pdf}
 	\end{overpic}
 \caption[Exponential growth profile of the lateral root primordia.]
-{{\bf Exponential growth profile of thelateral root primordia.} For each indicated VLR, the nuclei count is plotted (blue curve) as a function of time since gravistimulation with additional information about the growth factor (k) and doubling time (T) (in 5mins time points). The red dashed line represents the fitted exponential curve.}
+{{\bf Exponential growth profile of the lateral root primordia.} For each indicated VLR, the nuclei count is plotted (blue curve) as a function of time since gravistimulation with additional information about the growth factor (k) and doubling time (T) (in 5mins time points). The red dashed line represents the fitted exponential curve.}
 	\label{fig:growthcurves}
 \end{figure}
 %
@@ -1214,17 +1214,15 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \end{figure}
 %
 \clearpage
-
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=0.95\linewidth]{images/model_supp.pdf}
+	\begin{overpic}[width=0.65\linewidth]{images/GrowthCurveAurora.pdf}
 	\end{overpic}
-\caption[Models of lateral root formation with alternate rules of divisions.]
-{{\bf Models of lateral root formation with alternate rules of divisions.} In the first model (A-C), a random choice of division plane is used (as in Figure 5, main text) but daughter cells of equal area sizes are generated. In the second model (D-F), the plane of division is perpendicular to the direction of growth (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. In the third model (G-I), the plane of division is orthogonal to the previous one (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. (A, D, G) visualise the result of the models at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B, E, H) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C, F, I) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the VLR (Figure 4D, main text) are indicated.}
-\label{fig:suppmodel}
+\caption[Growth profile of the lateral root primordia in the \emph{aurora} mutant.]
+{{\bf Growth profile of the lateral root primordia in the \emph{aurora} mutant.} The number of cells over time is represented for the \emph{aurora} mutant in red, the growth profiles of the wild type datasets are also represented (\emph{grayed}). The mutant is growing slower.}
+	\label{fig:growthcurveaurora}
 \end{figure}
-%
 \clearpage
 %
 \begin{figure}[htbp]
@@ -1235,6 +1233,27 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 {{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of pPIN1::PIN1-GFP is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are in Table~\ref{tab:metadata}.}
 \label{fig:aurora}
 \end{figure}
+\clearpage
+
+\begin{figure}[htbp]
+\centering
+	\begin{overpic}[width=0.95\linewidth]{images/Model_visu.pdf}
+	\end{overpic}
+\caption[Alternate visualisation of the model results.]
+{{\bf Alternate visualisation of the model results.}For each indicated model (corresponding to Figure 5 in the main text), the result of the models at the end of the simulation are represented. Three types of visualisation are used: cell outlines (top), nuclei (middle) and layers (bottom). Colours indicate layers as in Figure 2D (main text). }
+\label{fig:visumodel}
+\end{figure}
+%
+\begin{figure}[htbp]
+\centering
+	\begin{overpic}[width=0.75\linewidth]{images/model_supp.pdf}
+	\end{overpic}
+\caption[Models of lateral root formation with alternate rules of divisions.]
+{{\bf Models of lateral root formation with alternate rules of divisions.} In (A-C), the model is similar to Figure 5 (Model 1 - Geometric), except that the first division is forced to be asymmetric. In (D-F), a random choice of division plane is used (as in Figure 5, main text) but daughter cells of equal area sizes are generated. In (G-I), the plane of division is perpendicular to the direction of growth (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. In (J-L), the plane of division is orthogonal to the previous one (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. (A, D, G, J) visualise the result of the models at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B, E, H, K) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C, F, I, L) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the VLR (Figure 4D, main text) are indicated.}
+\label{fig:suppmodel}
+\end{figure}
+%
+
 %
 
 
