--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1174,7 +1174,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 		\end{overpic}
 \caption[Division sequence trees for all five wild type datasets and the aurora mutant.]
 {
-{\bf Division sequence trees for all five wild type datasets and the aurora mutant.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
+{\bf Division sequence trees for all five wild type datasets and the aurora mutant.} The x-axis corresponds to the number of time steps. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
 	\label{fig:treeDivisionSequences}
 \end{figure}
 %
