Misc change in supp figure S18

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1261,7 +1261,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 	\begin{overpic}[width=0.95\linewidth]{images/model_supp.pdf}
 	\end{overpic}
 \caption[Models of lateral root formation with alternate rules of divisions.]
-{{\bf Models of lateral root formation with alternate rules of divisions.} In (A-C), the model is similar to Figure 5 (Model 1 - Geometric), except that the first division is forced to be asymmetric. In (D-I), a random choice of division plane is used and daughter cells can either have unequal (D-F) of equal area sizes  (G-I). In (J-L), the plane of division is perpendicular to the direction of growth (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. In (M-O), the plane of division is orthogonal to the previous one (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. (A, D, G, J, M) visualise the result of the models at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B, E, H, K, N) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C, F, I, L, O) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the VLR (Figure 4D, main text) are indicated.}
+{{\bf Models of lateral root formation with alternate rules of divisions.} In (A-C), the model is similar to Figure 5 (\emph{Model - Geometric}), except that the first division is forced to be asymmetric. In (D-F), a random choice of division plane is used (similar to Figure 5 (\emph{Model - Random})but daughter cells have equal area sizes. In (G-I), the plane of division is perpendicular to the direction of growth (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. In (J-L), the plane of division is orthogonal to the previous one (see Section~\ref{sec:divisionRules}), the first division of the founder is asymmetric. (A, D, G, J) visualise the result of the models at the end of the simulation. Cell outlines (top), nuclei (middle) and layers (bottom) are represented. Colours indicate layers as in Figure 2D (main text). (B, E, H, K) tree representation of the order of periclinal divisions for 100 independent runs of the model. The dashed boxes indicate the proportion of models in which the periclinal divisions occur first in the outer layer (green $\geqslant$50\%, red $<$50\%). (C, F, I, L) Pie charts representing the proportion of alternating divisions (in blue) between the indicated division cycles. For reference, the proportions observed in the VLR (Figure 4D, main text) are indicated.}
 \label{fig:suppmodel}
 \end{figure}
 %
